[package]
name = "flatline"
version = "0.1.0"
edition = "2021"
description = "description - TBA"
authors = ["wedkarz02"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wedkarz02/flatline"
exclude = ["/.github/*", "/logs/*"]

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["add-extension", "trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter", "time", "valuable", "serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
valuable = { version = "0.1.1", features = ["derive"] }
